<resources>
	<string name="app_name" translatable="false">BoomStudio</string>
	<string name="app_welcome">Welcome to BoomStudio</string>

	<string name="exception_path">This path is already taken</string>
	<string name="exception_unexpected">An unexpected error has occurred</string>
	
	<string name="description_welcome">Create a new project to start from scratch. Open existing project from storage to continue.</string>
	<string name="description_storage">The app needs storage permission to open and edit projects.</string>

	<string name="task_loading">Loading</string>

	<string name="action_remove">Remove</string>
	<string name="action_got_it">GOT IT</string>
	<string name="action_file">File</string>
	<string name="action_edit">Edit</string>
	<string name="action_view">View</string>
	<string name="action_run">Run</string>
	<string name="action_refresh">Refresh</string>
	<string name="action_filter">Filter</string>
	<string name="action_search">Search</string>
	<string name="action_sort">Sort</string>
	<string name="action_new">New</string>
	<string name="action_save">Save all</string>
	<string name="action_back">Back</string>
	<string name="action_menu">Menu</string>
	<string name="action_open">Open</string>
	<string name="action_create">Create</string>
	<string name="action_copy">Copy</string>
	<string name="action_share">Share</string>
	<string name="action_delete">Delete</string>
	<string name="action_new_project">New project</string>
	<string name="action_open_folder">Open directory</string>
	<string name="action_install_apk">Install APK</string>
	<string name="action_get_from_vcs">Get from VCS</string>

	<string name="pref_cat_appearance">Appearance</string>
	<string name="pref_cat_about">About</string>
	<string name="pref_cat_github" translatable="false">GitHub</string>
	
	<string name="pref_dark">Dark Theme</string>
	<string name="pref_lang">Language</string>
	<string name="pref_autosave">Auto Save</string>
	<string name="pref_wordwrap">Word Wrap</string>
	<string name="pref_line_number">Line Number</string>
	<string name="pref_syntax">Syntax Highlight</string>
	<string name="pref_install">Install APK after build</string>
	<string name="pref_hidden">Hidden Files</string>
	<string name="pref_about">Made by MrBoomDev in 2022</string>
	
	<string name="pref_desc_dark">Darkness overwhelms my mind!</string>
	<string name="pref_desc_lang">Will apply to the whole application</string>
	<string name="pref_desc_wrap">When the end is reached, it wraps the text to the next line</string>

	<string name="menu_icons">Select Icon</string>
	<string name="menu_vector">Configure Vector Asset</string>
	<string name="menu_resources">Resources</string>
	<string name="menu_notifications">Notifications</string>
	<string name="menu_editor">Editor</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_storage_permission">Storage Permission</string>

	<string name="category_projects">Projects</string>
	<string name="category_customize">Customize</string>
	<string name="category_plugins">Plugins</string>
	<string name="category_help">Help</string>
	<string name="category_project">Project</string>
	<string name="category_android" translatable="false">Android</string>
	<string name="category_theme">Theme attributes</string>

	<string name="project_package">Package name</string>
	<string name="project_package_default" translatable="false">com.example.helloworld</string>
	<string name="project_name">App name</string>
	<string name="project_name_default" translatable="false">Hello world</string>
	<string name="project_location">Project location</string>
	<string name="project_location_default" translatable="false">/sdcard/MrBoomDev/BoomStudio/helloworld/</string>
	<string name="project_lang">Language</string>
	<string name="project_lang_default" translatable="false">Java</string>
	<string name="project_sdk">Minimum SDK</string>
	<string name="project_sdk_default" translatable="false">Android 7.1 (API level 25)</string>
</resources>
