<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    android:orientation="vertical">

    <LinearLayout
        style="@style/header">

        <ImageView
            style="@style/header_item.main"
            android:tooltipText="@string/action_back"
            app:srcCompat="@drawable/ic_back_outline" />

        <TextView
            style="@style/header_title"
            android:text="@string/menu_resources" />

        <ImageView
            style="@style/header_item.clickable"
            android:tooltipText="@string/action_new"
            app:srcCompat="@drawable/ic_add_outline" />

        <ImageView
            android:id="@+id/search"
            style="@style/header_item.clickable"
            android:tooltipText="@string/action_search"
            app:srcCompat="@drawable/ic_outline_search_24" />

        <ImageView
            style="@style/header_item.clickable"
            android:tooltipText="@string/action_refresh"
            app:srcCompat="@drawable/ic_outline_refresh_24" />

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/window_transparent"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="1dp"
        app:tabMode="scrollable"
        app:tabPaddingEnd="10dp"
        app:tabPaddingStart="10dp"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Body1"
        app:tabTextColor="@color/view_first">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_project" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_android" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_theme" />
    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerColor="@color/view_divider" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>