<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    android:orientation="vertical">

    <LinearLayout
        style="@style/header">

        <ImageView
            style="@style/header_item.clickable"
            android:tooltipText="@string/action_back"
            app:srcCompat="@drawable/ic_back_outline" />

        <TextView
            style="@style/header_item.clickable"
            android:text="@string/menu_icons" />

        <ImageView
            android:id="@+id/search"
            style="@style/header_item.clickable"
            android:tooltipText="@string/action_search"
            app:srcCompat="@drawable/ic_outline_search_24" />

        <ImageView
            style="@style/header_item.clickable"
            android:tooltipText="@string/action_sort"
            app:srcCompat="@drawable/ic_outline_sort_24" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>