<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/lang"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?attr/actionBarItemBackground"
            android:clickable="true"
            android:contentDescription="@string/action_menu"
            android:focusable="true"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_outline_menu_24"
            tools:srcCompat="@drawable/ic_outline_menu_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/menu_editor"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="56dp"
            android:background="?attr/actionBarItemBackground"
            android:clickable="true"
            android:contentDescription="@string/action_create"
            android:focusable="true"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_outline_add_24"
            tools:srcCompat="@drawable/ic_outline_add_24" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="56dp"
            android:background="?attr/actionBarItemBackground"
            android:clickable="true"
            android:contentDescription="@string/action_copy"
            android:focusable="true"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_outline_notifications_24"
            tools:srcCompat="@drawable/ic_outline_notifications_24" />

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?attr/actionBarItemBackground"
            android:clickable="true"
            android:contentDescription="@string/action_back"
            android:focusable="true"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_outline_settings_24"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:srcCompat="@drawable/ic_outline_settings_24" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerColor="@color/divider" />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="1dp"
        app:tabMode="scrollable"
        app:tabPaddingEnd="10dp"
        app:tabPaddingStart="10dp"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Body1"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_get_from_vcs" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_share" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progressBackgroundTint="@color/transparent"
        android:progressTint="@color/primary" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerColor="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>