<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ripple_square"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_name_default"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_location_default"
                android:textColor="@color/second" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/options"
        android:layout_width="@dimen/header_item"
        android:layout_height="@dimen/header_item"
        android:layout_margin="1dp"
        android:background="@drawable/ripple_circle"
        android:clickable="false"
        android:contentDescription="@string/action_menu"
        android:focusable="true"
        android:padding="@dimen/header_item_padding"
        app:srcCompat="@drawable/ic_outline_more_vert_24" />
</LinearLayout>
